added in basic HTML markup with text and links to be styled with CSS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,61 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="header">
+    	<header>
+    		<h1>My Name</h1>
+    		<nav>
+    			<a id="home" href="#">Home</a>
+    			<a id="about" href="#">About</a>
+    			<a id="contact" href="#">Contact</a>
+    			<a id="projects" href="#">Projects</a>
+    		</nav>
+    	</header>
+    </div>
+    <div id="head-img">
+    	<h2>My Name</h2>
+    	<div class="link">
+    		<a href="#">My Projects</a>
+    	</div>
+    </div>
+    <div id="main-imgs">
+    	<div class="image">
+    		<div class="link">
+    			<a href="#">Project 1</a>
+    		</div>
+    	</div>
+    	<div class="image">
+    		<div class="link">
+    			<a href="#">Project 2</a>
+    		</div>
+    	</div>
+    	<div class="image">
+    		<div class="link">
+    			<a href="#">Project 3</a>
+    		</div>
+    	</div>
+    	<div class="image">
+    		<div class="link">
+    			<a href="#">Project 4</a>
+    		</div>
+    	</div>
+    	<div class="image">
+    		<div class="link">
+    			<a href="#">Project 5</a>
+    		</div>
+    	</div>
+    	<div class="image">
+    		<div class="link">
+    			<a href="#">Project 6</a>
+    		</div>
+    	</div>
+    </div>
+    <div id="footer">
+    	<footer>
+    		<div id="contact-me" class="link">
+    			<a href="#">Contact Me</a>
+    		</div>
+    	</footer>
+    </div>
 </body>
 </html>
