removed unnecessary id tags on some divs

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+    <!-- <link rel="stylesheet" href="style/reset.css"> -->
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-    <div id="header">
+    <div>
     	<header>
     		<h1>My Name</h1>
     		<nav>
@@ -21,45 +21,45 @@
     </div>
     <div id="head-img">
     	<h2>My Name</h2>
-    	<div class="link">
+    	<div class="text">
     		<a href="#">My Projects</a>
     	</div>
     </div>
-    <div id="main-imgs">
+    <div> <!-- Main Project Images Here -->
     	<div class="image">
-    		<div class="link">
+    		<div class="text">
     			<a href="#">Project 1</a>
     		</div>
     	</div>
     	<div class="image">
-    		<div class="link">
+    		<div class="text">
     			<a href="#">Project 2</a>
     		</div>
     	</div>
     	<div class="image">
-    		<div class="link">
+    		<div class="text">
     			<a href="#">Project 3</a>
     		</div>
     	</div>
     	<div class="image">
-    		<div class="link">
+    		<div class="text">
     			<a href="#">Project 4</a>
     		</div>
     	</div>
     	<div class="image">
-    		<div class="link">
+    		<div class="text">
     			<a href="#">Project 5</a>
     		</div>
     	</div>
     	<div class="image">
-    		<div class="link">
+    		<div class="text">
     			<a href="#">Project 6</a>
     		</div>
     	</div>
     </div>
-    <div id="footer">
+    <div>
     	<footer>
-    		<div id="contact-me" class="link">
+    		<div id="contact-me" class="text">
     			<a href="#">Contact Me</a>
     		</div>
     	</footer>
