--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div>
     	<header>
-    		<h1>My Name</h1>
     		<nav>
+    			<h1>My Name</h1>
     			<a id="home" href="#">Home</a>
     			<a id="about" href="#">About</a>
     			<a id="contact" href="#">Contact</a>
@@ -20,12 +20,14 @@
     	</header>
     </div>
     <div id="head-img">
-    	<h2>My Name</h2>
-    	<div class="text">
-    		<a href="#">My Projects</a>
+    	<div id="image-txt">
+	    	<h2>My Name</h2>
+	    	<div id="main-link">
+	    		<a href="#">My Projects</a>
+	    	</div>
     	</div>
     </div>
-    <div> <!-- Main Project Images Here -->
+    <div id="content"> <!-- Main Project Images Here -->
     	<div class="image">
     		<div class="text">
     			<a href="#">Project 1</a>
