changed id tags on nav links to be class tags for uniform css aplication, changed My Name text to Connor Boatman, and removed unnecessary class tag from contact-me div

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="style/reset.css"> -->
+    <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
     <div>
     	<header>
     		<nav>
-    			<h1>My Name</h1>
-    			<a id="home" href="#">Home</a>
-    			<a id="about" href="#">About</a>
-    			<a id="contact" href="#">Contact</a>
-    			<a id="projects" href="#">Projects</a>
+    			<h1>Connor Boatman</h1>
+    			<a class="link" href="#">Home</a>
+    			<a class="link" href="#">About</a>
+    			<a class="link" href="#">Contact</a>
+    			<a class="link" href="#">Projects</a>
     		</nav>
     	</header>
     </div>
     <div id="head-img">
     	<div id="image-txt">
-	    	<h2>My Name</h2>
+	    	<h2>Connor Boatman</h2>
 	    	<div id="main-link">
 	    		<a href="#">My Projects</a>
 	    	</div>
@@ -61,7 +61,7 @@
     </div>
     <div>
     	<footer>
-    		<div id="contact-me" class="text">
+    		<div id="contact-me">
     			<a href="#">Contact Me</a>
     		</div>
     	</footer>
