changed a tags to link to the correct .html pages

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     	<header>
     		<nav>
     			<h1>Connor Boatman</h1>
-    			<a class="link" href="#">Home</a>
-    			<a class="link" href="#">About</a>
-    			<a class="link" href="#">Contact</a>
-    			<a class="link" href="#">Projects</a>
+    			<a class="link" href="index.html">Home</a>
+    			<a class="link" href="about.html">About</a>
+    			<a class="link" href="contact.html">Contact</a>
+    			<a class="link" href="projects.html">Projects</a>
     		</nav>
     	</header>
     </div>
@@ -23,46 +23,46 @@
     	<div id="image-txt">
 	    	<h2>Connor Boatman</h2>
 	    	<div id="main-link">
-	    		<a href="#">My Projects</a>
+	    		<a href="projects.html">My Projects</a>
 	    	</div>
     	</div>
     </div>
     <div id="content"> <!-- Main Project Images Here -->
     	<div class="image">
     		<div class="text">
-    			<a href="#">Project 1</a>
+    			<a href="projects.html">Project 1</a>
     		</div>
     	</div>
     	<div class="image">
     		<div class="text">
-    			<a href="#">Project 2</a>
+    			<a href="projects.html">Project 2</a>
     		</div>
     	</div>
     	<div class="image">
     		<div class="text">
-    			<a href="#">Project 3</a>
+    			<a href="projects.html">Project 3</a>
     		</div>
     	</div>
     	<div class="image">
     		<div class="text">
-    			<a href="#">Project 4</a>
+    			<a href="projects.html">Project 4</a>
     		</div>
     	</div>
     	<div class="image">
     		<div class="text">
-    			<a href="#">Project 5</a>
+    			<a href="projects.html">Project 5</a>
     		</div>
     	</div>
     	<div class="image">
     		<div class="text">
-    			<a href="#">Project 6</a>
+    			<a href="projects.html">Project 6</a>
     		</div>
     	</div>
     </div>
     <div>
     	<footer>
     		<div id="contact-me">
-    			<a href="#">Contact Me</a>
+    			<a href="contact.html">Contact Me</a>
     		</div>
     	</footer>
     </div>
