added information to the about.html page

--- a/about.html
+++ b/about.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/about.css">
 </head>
 <body>
-    <h1> ABOUT </h1>
+	<header>
+    	<h1> About Me:</h1>
+    </header>
+    <div id="about-me">
+    	<p>Hi my name is Connor Boatman. I really enjoy coding. My favorite coding languages are JavaScript and Python. I'm also an artist so I'll add in a few of my favorite drawings below, I hope you like them!</p>
+    </div>
+    <div id="art">
+    	<div id="one"></div>
+    	<div id="two"></div>
+    	<div id="three"></div>
+    </div>
 </body>
 </html>
